examples/negative/type_errors/L1/10_mod_int_bool.ob
MODULE ModIntBool;

VAR i: INTEGER;
    b: BOOLEAN;
    ok: BOOLEAN; (* Ensures errors occur on the correct line *)

BEGIN
  i := 42;
  b := TRUE;
  i := i MOD b; ok := TRUE;
END ModIntBool.
